--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@ window.MathJax = {
   <main class="px-8 py-10 flex-grow max-w-4xl mx-auto">
     <section class="text-center mb-8">
       <h2 class="text-3xl font-bold">hi, i'm Sameer</h2>
-      <p class="mt-2 text-gray-400">ml researcher & developer</p>
+      <p class="mt-2 text-gray-400">20. engineer.</p>
     </section>
 
     <!-- Recent Posts -->
