--- a/index.html
+++ b/index.html
@@ -25,18 +25,21 @@ window.MathJax = {
   
   <!-- Header -->
   <header class="flex justify-between items-center px-8 py-6 border-b border-gray-700">
-    <a href="index.html" class="text-xl font-bold hover:text-teal-400">Sameer's Blog</a>
-    <nav class="flex space-x-6 text-sm">
-      <a href="index.html" class="hover:text-teal-400">Home</a>
-      <a href="about.html" class="hover:text-teal-400">About</a>
-      <a href="skills.html" class="hover:text-teal-400">Skills</a>
-    </nav>
-  </header>
+  <a href="index.html" class="flex items-center hover:opacity-80 transition-opacity">
+    <img src="assets/son_kun2.jpg" alt="Sameer" class="w-10 h-10 rounded-full object-cover border-2 border-black-400">
+  </a>
+  <nav class="flex space-x-6 text-sm">
+    <a href="index.html" class="hover:text-teal-400">Home</a>
+    <a href="about.html" class="hover:text-teal-400">About</a>
+    <a href="skills.html" class="hover:text-teal-400">Skills</a>
+    <a href="contact.html" class="hover:text-teal-400">Contact</a>
+  </nav>
+</header>
 
   <!-- Main Content -->
   <main class="px-8 py-10 flex-grow max-w-4xl mx-auto">
     <section class="text-center mb-8">
-      <h2 class="text-3xl font-bold">hi, i'm Sameer</h2>
+      <h2 class="text-3xl font-bold">hi, i'm sameer</h2>
       <p class="mt-2 text-gray-400">20. engineer.</p>
     </section>
 
@@ -51,12 +54,6 @@ window.MathJax = {
 
   <!-- Footer -->
   <footer class="text-center text-gray-400 text-sm py-6 border-t border-gray-700">
-    <div class="mb-2">
-      Connect with me — 
-      <a href="https://github.com/" target="_blank" class="hover:text-teal-400">GitHub</a> • 
-      <a href="https://twitter.com/" target="_blank" class="hover:text-teal-400">Twitter</a> • 
-      <a href="https://linkedin.com/" target="_blank" class="hover:text-teal-400">LinkedIn</a>
-    </div>
     <div>&copy; 2025 Sameer's Blog</div>
   </footer>
 
