--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!doctype html>
-<html lang="en" class="bg-gray-900 text-gray-200">
+<html lang="en">
 <head>
 <meta charset="utf-8"/>
 <meta name="viewport" content="width=device-width,initial-scale=1"/>
-<title>Sameer's Blog</title>
+<title>Goku's Blog</title>
 
 <!-- Tailwind CSS CDN -->
 <script src="https://cdn.tailwindcss.com"></script>
@@ -21,52 +21,88 @@ window.MathJax = {
 
 <link rel="stylesheet" href="style.css">
 <!-- Essential Meta Tags -->
-<meta property="og:title" content="Sameer's Blog - Machine Learning & Development">
-<meta property="og:description" content="A minimal blog about machine learning experiments, programming tutorials, and development insights.">
+<meta property="og:title" content="Goku's Blog - Machine Learning & Development">
+<meta property="og:description" content="A professional blog about machine learning experiments, programming tutorials, and development insights.">
 <meta property="og:image" content="https://sameerdev7.github.io/assets/son_kun2.jpg">
 <meta property="og:url" content="https://sameerdev7.github.io.com">
 <meta property="og:type" content="website">
-<meta property="og:site_name" content="Sameer's Blog">
+<meta property="og:site_name" content="Goku's Blog">
 
 <!-- Twitter Card Tags -->
 <meta name="twitter:card" content="summary_large_image">
-<meta name="twitter:title" content="Sameer's Blog - Machine Learning & Development">
-<meta name="twitter:description" content="A minimal blog about machine learning experiments, programming tutorials, and development insights.">
+<meta name="twitter:title" content="Goku's Blog - Machine Learning & Development">
+<meta name="twitter:description" content="A professional blog about machine learning experiments, programming tutorials, and development insights.">
 <meta name="twitter:image" content="https://yourdomain.com/assets/og-image.jpg">
 <meta name="twitter:creator" content="@_sammeeer">
 
 <!-- Additional Meta Tags -->
-<meta name="description" content="A minimal blog about machine learning experiments, programming tutorials, and development insights.">
-<meta name="author" content="Sameer">
+<meta name="description" content="A professional blog about machine learning experiments, programming tutorials, and development insights.">
+<meta name="author" content="Goku">
 
 <!-- Favicon -->
 <link rel="icon" type="image/png" href="assets/favicon.png">
+
+<!-- Theme Toggle Script -->
+<script>
+  // Theme toggle functionality
+  function initTheme() {
+    const savedTheme = localStorage.getItem('theme') || 'light';
+    document.documentElement.setAttribute('data-theme', savedTheme);
+    updateThemeIcon(savedTheme);
+  }
+  
+  function toggleTheme() {
+    const currentTheme = document.documentElement.getAttribute('data-theme') || 'light';
+    const newTheme = currentTheme === 'light' ? 'dark' : 'light';
+    document.documentElement.setAttribute('data-theme', newTheme);
+    localStorage.setItem('theme', newTheme);
+    updateThemeIcon(newTheme);
+  }
+  
+  function updateThemeIcon(theme) {
+    const icon = document.querySelector('.theme-icon');
+    if (icon) {
+      icon.textContent = theme === 'light' ? '🌙' : '☀️';
+    }
+  }
+  
+  // Initialize theme on page load
+  document.addEventListener('DOMContentLoaded', initTheme);
+</script>
 </head>
-<body class="font-mono flex flex-col min-h-screen bg-gray-900 text-gray-200">
+<body class="font-sans flex flex-col min-h-screen">
   
   <!-- Header -->
-  <header class="flex justify-between items-center px-8 py-6 border-b border-gray-700">
-  <a href="index.html" class="flex items-center hover:opacity-80 transition-opacity">
-    <img src="assets/son_kun2.jpg" alt="Sameer" class="w-10 h-10 rounded-full object-cover border-2 border-black-400">
-  </a>
-  <nav class="flex space-x-6 text-sm">
-    <a href="index.html" class="hover:text-teal-400">Home</a>
-    <a href="about.html" class="hover:text-teal-400">About</a>
-    <a href="skills.html" class="hover:text-teal-400">Skills</a>
-    <a href="contact.html" class="hover:text-teal-400">Contact</a>
-  </nav>
-</header>
+  <header class="flex justify-between items-center px-8 py-6 border-b">
+    <a href="index.html" class="flex items-center hover:opacity-80 transition-opacity">
+      <span class="text-xl font-bold">Goku</span>
+    </a>
+    <div class="flex items-center space-x-6">
+      <nav class="flex space-x-6 text-sm">
+        <a href="index.html" class="nav-link">Home</a>
+        <a href="about.html" class="nav-link">About</a>
+        <a href="skills.html" class="nav-link">Skills</a>
+        <a href="contact.html" class="nav-link">Contact</a>
+      </nav>
+      <button onclick="toggleTheme()" class="theme-toggle" title="Toggle theme">
+        <span class="theme-icon">🌙</span>
+      </button>
+    </div>
+  </header>
 
   <!-- Main Content -->
   <main class="px-8 py-10 flex-grow max-w-4xl mx-auto">
-    <section class="text-center mb-8">
-      <h2 class="text-3xl font-bold">hi, i'm sameer</h2>
-      <p class="mt-2 text-gray-400">20. engineer.</p>
+    <section class="text-center mb-12">
+      <h1 class="text-4xl font-bold mb-2">Goku</h1>
+      <p class="text-lg text-secondary">Machine Learning Engineer & Developer</p>
+      <p class="mt-4 text-secondary max-w-2xl mx-auto">
+        Welcome to my blog where I share insights on machine learning, programming tutorials, and development experiences.
+      </p>
     </section>
 
     <!-- Recent Posts -->
     <section>
-      <h3 class="text-lg font-semibold mb-4">Recent Posts</h3>
+      <h2 class="text-2xl font-bold mb-6">Recent Posts</h2>
       <div class="space-y-6">
         <!-- POST_CARDS -->
       </div>
@@ -74,8 +110,8 @@ window.MathJax = {
   </main>
 
   <!-- Footer -->
-  <footer class="text-center text-gray-400 text-sm py-6 border-t border-gray-700">
-    <div>&copy; 2025 Sameer's Blog</div>
+  <footer class="text-center text-secondary text-sm py-6 border-t">
+    <div>&copy; 2025 Goku's Blog</div>
   </footer>
 
 <!-- Prism JS -->
